[gd_scene load_steps=35 format=2]

[ext_resource path="res://sounds/click_menu.wav" type="AudioStream" id=1]
[ext_resource path="res://fonts/progresspixel-bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/shaders/vignette.shader" type="Shader" id=3]
[ext_resource path="res://src/shaders/vignette.png" type="Texture" id=4]
[ext_resource path="res://src/levels/Skelet.gd" type="Script" id=5]
[ext_resource path="res://sounds/music/bckg_music_forest.mp3" type="AudioStream" id=6]
[ext_resource path="res://sounds/music/bckg_ambient_forest.mp3" type="AudioStream" id=7]
[ext_resource path="res://sounds/stair.mp3" type="AudioStream" id=8]
[ext_resource path="res://src/prefabs/menus/ResumeButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/actors/player/player.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/levels/Pause.gd" type="Script" id=11]
[ext_resource path="res://src/levels/miniGame.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/prefabs/menus/ExitToMainButton.tscn" type="PackedScene" id=13]
[ext_resource path="res://artwork/skeletom 2.png" type="Texture" id=14]
[ext_resource path="res://ui/dialog.png" type="Texture" id=15]
[ext_resource path="res://fonts/monogram.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://src/levels/levelArea.gd" type="Script" id=17]
[ext_resource path="res://artwork/attic.png" type="Texture" id=18]
[ext_resource path="res://artwork/skeletom i.png" type="Texture" id=19]
[ext_resource path="res://sounds/music/after_body.mp3" type="AudioStream" id=20]
[ext_resource path="res://src/levels/monologArea1.gd" type="Script" id=21]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

const vec3 color = vec3(0, 0, 0);

void fragment() {
	COLOR = vec4(color, 1);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="Theme" id=3]
/colors/ = Color( 0, 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 3 )
shader_param/debanding_dither = 0.0
shader_param/blur = 0.1
shader_param/vignette_darkness = 0.06
shader_param/vignette = ExtResource( 4 )

[sub_resource type="Shader" id=5]
code = "
shader_type canvas_item;

uniform float offset = 1f;

void fragment(){
	vec4 green_channel = texture(SCREEN_TEXTURE, SCREEN_UV);
	vec4 red_channel = texture(SCREEN_TEXTURE, vec2(SCREEN_UV.x + (offset * SCREEN_PIXEL_SIZE.x), SCREEN_UV.y));
	vec4 blue_channel = texture(SCREEN_TEXTURE, vec2(SCREEN_UV.x - (offset * SCREEN_PIXEL_SIZE.x), SCREEN_UV.y));
	COLOR = vec4(red_channel.r, green_channel.g, blue_channel.b, 1f);
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/offset = 1.25

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 56.7422, 88.6552 )

[sub_resource type="DynamicFont" id=9]
size = 64
outline_size = 2
font_data = ExtResource( 16 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 105.076, 43.2867 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 57.1992, 65.2256 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 56.7422, 88.6552 )

[sub_resource type="DynamicFont" id=13]
size = 64
outline_size = 2
font_data = ExtResource( 16 )

[node name="Forest" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="ColorCorrection" type="CanvasModulate" parent="."]
position = Vector2( 54, -21 )
color = Color( 0.658824, 0.619608, 0.588235, 1 )

[node name="SoundsBackground" type="Node" parent="."]

[node name="BckgMusic" type="AudioStreamPlayer" parent="SoundsBackground"]
pause_mode = 2
stream = ExtResource( 6 )
volume_db = -15.0
pitch_scale = 0.8
autoplay = true

[node name="BckgMusic2" type="AudioStreamPlayer" parent="SoundsBackground"]
pause_mode = 2
stream = ExtResource( 20 )
volume_db = -15.0
pitch_scale = 0.9

[node name="BckgAmbient2" type="AudioStreamPlayer" parent="SoundsBackground"]
pause_mode = 2
stream = ExtResource( 7 )
volume_db = -22.0

[node name="PanelBottom" type="Panel" parent="."]
material = SubResource( 2 )
margin_left = -863.0
margin_top = 324.344
margin_right = 467.0
margin_bottom = 552.344
rect_scale = Vector2( 1.32, 0.92857 )
rect_pivot_offset = Vector2( 512.936, 75.3163 )
theme = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelBottom2" type="Panel" parent="."]
material = SubResource( 2 )
margin_left = -863.0
margin_top = -345.0
margin_right = 467.0
margin_bottom = -57.0
rect_scale = Vector2( 1.32, 0.92857 )
rect_pivot_offset = Vector2( 512.936, 75.3163 )
theme = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 10 )]
position = Vector2( -454.308, 172.647 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 3.66693, -75 )
current = true
limit_left = -870
limit_right = 590
smoothing_enabled = true
smoothing_speed = 4.0

[node name="Vignette" type="CanvasLayer" parent="Player/Camera2D"]

[node name="ColorRect" type="ColorRect" parent="Player/Camera2D/Vignette"]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ChromaticAberration" type="CanvasLayer" parent="Player/Camera2D"]

[node name="ColorRect" type="ColorRect" parent="Player/Camera2D/ChromaticAberration"]
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
rect_pivot_offset = Vector2( -696.238, 785.158 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="decor_objects" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="decor_objects"]
position = Vector2( -414.912, 297.907 )
texture = ExtResource( 18 )
offset = Vector2( -24.9227, 0 )
region_enabled = true
region_rect = Rect2( 112, 585, 1529, 206 )

[node name="Sprite2" type="Sprite" parent="decor_objects"]
position = Vector2( 501.347, 297.907 )
texture = ExtResource( 18 )
offset = Vector2( -24.9227, 0 )
region_enabled = true
region_rect = Rect2( 112, 585, 1529, 206 )

[node name="attic" type="Sprite" parent="decor_objects"]
position = Vector2( -146.112, 89.6524 )
z_index = -1
texture = ExtResource( 18 )
region_enabled = true
region_rect = Rect2( 118, 113, 1470, 347 )

[node name="collide_objects" type="Node2D" parent="."]

[node name="interact_objects" type="Node2D" parent="."]
z_index = -1

[node name="UI" type="CanvasLayer" parent="."]

[node name="NoteCanvas" type="NinePatchRect" parent="UI"]
visible = false
margin_left = 59.5231
margin_top = 70.6206
margin_right = 443.523
margin_bottom = 636.621
texture = ExtResource( 15 )
region_rect = Rect2( 23.9391, 25.5505, 785.693, 210.529 )
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="UI/NoteCanvas"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
custom_fonts/normal_font = SubResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 2
text = "День 2. Я все еще не понимаю где мы находимся. Кругом творится какая-то чертовщина, звуки отовсюду, туман который пахнет страхом... "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="VBoxContainer" parent="UI"]
pause_mode = 2
visible = false
margin_left = 117.737
margin_top = 31.5417
margin_right = 1157.74
margin_bottom = 695.541
custom_constants/separation = 30
alignment = 1
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="UI/Pause"]
margin_top = 204.0
margin_right = 1040.0
margin_bottom = 459.0
custom_constants/separation = -15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" parent="UI/Pause/Buttons" instance=ExtResource( 9 )]
margin_right = 1040.0

[node name="ExitToMainButton" parent="UI/Pause/Buttons" instance=ExtResource( 13 )]
margin_top = 120.0
margin_right = 1040.0
margin_bottom = 255.0

[node name="MenuClick" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 1 )
pitch_scale = 1.7

[node name="StairSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 8 )
pitch_scale = 1.7

[node name="MiniGame" parent="." instance=ExtResource( 12 )]
visible = false
position = Vector2( -1151.85, 57.3887 )

[node name="levelArea" type="Area2D" parent="."]
position = Vector2( -574.4, 166.4 )
script = ExtResource( 17 )
scene_to_load = "res://src/levels/room.tscn"
sound = "stair"

[node name="CollisionShape2D" type="CollisionShape2D" parent="levelArea"]
shape = SubResource( 8 )

[node name="QuestionMark" type="Label" parent="levelArea"]
visible = false
margin_left = -10.1744
margin_top = -149.504
margin_right = 13.8256
margin_bottom = -98.5038
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skelet" type="Node2D" parent="."]
position = Vector2( 400.063, 192.424 )
script = ExtResource( 5 )
sound = "stair"

[node name="QuestionMark" type="Label" parent="Skelet"]
visible = false
margin_left = -10.1744
margin_top = -133.881
margin_right = 13.8256
margin_bottom = -82.8808
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skelet1" type="Sprite" parent="Skelet"]
texture = ExtResource( 14 )

[node name="skelet2" type="Sprite" parent="Skelet"]
visible = false
texture = ExtResource( 19 )

[node name="Area2D" type="Area2D" parent="Skelet"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skelet/Area2D"]
shape = SubResource( 10 )

[node name="StaticBody2D" type="StaticBody2D" parent="Skelet"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skelet/StaticBody2D"]
shape = SubResource( 11 )

[node name="monologArea" type="Area2D" parent="."]
position = Vector2( 280.851, 172.227 )
monitoring = false
script = ExtResource( 21 )
monolog = "skeleton"

[node name="CollisionShape2D" type="CollisionShape2D" parent="monologArea"]
shape = SubResource( 12 )

[node name="QuestionMark" type="Label" parent="monologArea"]
visible = false
margin_left = -10.1744
margin_top = -149.504
margin_right = 13.8256
margin_bottom = -98.5038
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="levelArea" to="levelArea" method="_on_levelArea_body_entered"]
[connection signal="body_exited" from="levelArea" to="levelArea" method="_on_levelArea_body_exited"]
[connection signal="body_entered" from="Skelet/Area2D" to="Skelet" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Skelet/Area2D" to="Skelet" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="monologArea" to="monologArea" method="_on_monologArea_body_entered"]
